--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
         </section>
 
         <section class="rainydays-logo">
-          <img src="assets/icons/rainydays-logo-cropped.png">
+          <a href="index.html">
+            <img src="assets/icons/rainydays-logo-cropped.png">
+          </a>
         </section>
 
         <section class="desktop-nav">
@@ -76,14 +78,16 @@
         <a href="shop.html" class="cta-orange">Go to shop</a>
       </section>
       
-      <section class="sale"> <!--why doesnt the info and image align when the they are in a grid and the image has 100%-->
+      <!-- Link this section to the shop? -->
+      <!-- When at the smallest screen size the text overlaps... -->
+      <section class="sale">
         <div class="sale-info"> 
-          <p class="sale-title">End of season <span class="orange">sale</span></p>
+          <p class="sale-title">End of season <spanclass="orange">sale</span></p>
           <p class="sale-text">Get up to</p>
-          <p class="orange sale-percent">50% off</p>  
+          <p class="orange sale-percent">50% off</p>
         </div>
-        <div>
-          <img src="assets/images/sale-image.jpg" alt="man and woman standing on top of a mountain" class="sale-image"> <!--should this also be a background image in CSS?-->
+        <div class="sale-image-container">
+          <img src="assets/images/sale-image.jpg" alt="man and woman standing on top of a mountain" class="sale-image">
         </div>
       </section>
 
@@ -140,61 +144,7 @@
 
     </main>
 
-
-    <footer>
-      <section>
-        <a href="index.html">
-          <img src="assets/icons/rainydays-logo.png" alt="Rainydays logo">
-        </a>
-      </section>
-
-      <section class="our-world">
-        <div>
-          <p>Our world</p>
-        </div>
-        <div>
-          <nav>
-            <ul>
-              <li><a href="about-us.html">About us</a></li>
-              <li><a href="contact-us.html">Contact us</a></li>
-              <li><a href="faq">FAQ</a></li>
-            </ul>
-          </nav>  
-        </div>
-      </section>
-
-      <section class="follow-us">
-        <div>
-          <p>Follow us</p>
-        </div>
-        <div class="social-media">
-          <img src="assets/icons/facebook-icon.png" alt="Facebook icon" class="footer-icon">
-          <p>Facebook</p>
-        </div>
-        <div class="social-media">
-          <img src="assets/icons/instagram-icon.png" alt="Instagram icon" class="footer-icon">
-          <p>Instagram</p>
-        </div>
-      </section>
-
-      <section class="newsletter">
-        <div>
-          <p>Newsletter</p>
-        </div>
-        <div class="newsletter-grid">
-          <p>Receive exclusive offers, updates on new arrivals, and insider tips for your next outdoor adventure straight to your inbox.</p>
-        </div>
-        <div>
-          <p>Join the Rainydays community!</p>
-          <div class="newsletter-mail">
-            <input type="text" class="newsletter-mail-input" placeholder="example@mail.com">
-            <img src="assets/icons/vector-icon.png" class="newsletter-button"> <!--need to make an overlay when pressed-->
-          </div>
-        </div>
-      </section>
-
-    </footer>
-
+    <footer></footer>
 
   </body>
 </html>
