--- a/faq.html
+++ b/faq.html
@@ -12,31 +12,61 @@
   </head>
 
 <body>
+
   <header>
-    <section>
-      <img src="assets/icons/rainydays-logo-cropped.png" alt="Rainydays logo">
-    </section>
+    <div class="header-top">
 
-    <section>
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="shop.html">Shop</a></li>
-          <li><a href="about-us.html">About</a></li>
-          <li><a href="contact-us.html">Contact</a></li>
-        </ul>
-      </nav>  
-    </section>
+      <section class="hamburger-menu">
+        <input type="checkbox">
+        <span></span>
+        <span></span>
+        <span></span>
+        <div class="hamburger-menu-links">
+          <ul>
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="shop.html">Shop</a></li>
+            <li><a href="about-us.html">About</a></li>
+            <li><a href="contact-us.html">Contact</a></li>
+          </ul>
+        </div>     
+      </section>
 
-    <section class="search">
-      <input type="text" class="search-field">
-      <img src="assets/icons/search-icon.png" class="search-icon">
-    </section>
+      <section class="rainydays-logo">
+        <a href="index.html">
+          <img src="assets/icons/rainydays-logo-cropped.png">
+        </a>
+      </section>
 
-    <section>
-      <img src="assets/icons/heart-icon-white.png" alt="heart icon for favourites" class="header-icons">
-      <img src="assets/icons/basket-icon-white.png" alt="basket icon for shopping cart" class="header-icons">  
-    </section>
+      <section class="desktop-nav">
+        <nav>
+          <ul>
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="shop.html">Shop</a></li>
+            <li><a href="about-us.html">About</a></li>
+            <li><a href="contact-us.html">Contact</a></li>
+          </ul>
+        </nav>
+      </section>
+
+      <section class="search-field-desktop">
+        <input type="text" class="search-field">
+        <img src="assets/icons/search-icon.png" class="search-icon">
+      </section>
+
+      <section class="backet-container">
+        <img src="assets/icons/basket-icon-white.png" alt="basket icon for shopping cart" class="basket-icon">
+      </section>  
+
+    </div>
+
+    <div class="header-bottom">
+
+      <section class="search-field-mobile">
+        <input type="text" class="search-field">
+        <img src="assets/icons/search-icon.png" class="search-icon">
+      </section>
+
+    </div>
   </header>
 
   <main>
