--- a/testing.html
+++ b/testing.html
@@ -9,13 +9,62 @@
   </head>
 
   <body>
+    <header></header>
+    <main></main>
 
-
-
-<main>
-
-</main>
-
-
+    <footer>
+        <section>
+          <a href="index.html">
+            <img src="assets/icons/rainydays-logo.png" alt="Rainydays logo">
+          </a>
+        </section>
+  
+        <section class="our-world">
+          <div>
+            <p>Our world</p>
+          </div>
+          <div>
+            <nav>
+              <ul>
+                <li><a href="about-us.html">About us</a></li>
+                <li><a href="contact-us.html">Contact us</a></li>
+                <li><a href="faq">FAQ</a></li>
+              </ul>
+            </nav>  
+          </div>
+        </section>
+  
+        <section class="follow-us">
+          <div>
+            <p>Follow us</p>
+          </div>
+          <div class="social-media">
+            <img src="assets/icons/facebook-icon.png" alt="Facebook icon" class="footer-icon">
+            <p>Facebook</p>
+          </div>
+          <div class="social-media">
+            <img src="assets/icons/instagram-icon.png" alt="Instagram icon" class="footer-icon">
+            <p>Instagram</p>
+          </div>
+        </section>
+  
+        <section class="newsletter">
+          <div>
+            <p>Newsletter</p>
+          </div>
+          <div class="newsletter-grid">
+            <p>Receive exclusive offers, updates on new arrivals, and insider tips for your next outdoor adventure straight to your inbox.</p>
+          </div>
+          <div>
+            <p>Join the Rainydays community!</p>
+            <div class="newsletter-mail">
+              <input type="text" class="newsletter-mail-input" placeholder="example@mail.com">
+              <img src="assets/icons/vector-icon.png" class="newsletter-button"> <!--need to make an overlay when pressed-->
+            </div>
+          </div>
+        </section>
+  
+    </footer>
+    
   </body>
 </html>
