--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <meta name="description" content="The home page for the brand Rainydays">
     <title>Rainydays | Home</title>
     <link rel="stylesheet" href="css/general.css">
+    <link rel="stylesheet" href="css/header-footer.css">
     <link rel="stylesheet" href="css/home.css">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/footer.css">
     <link rel="icon" type="image/x-icon" href="#"> <!--the favicon-->
   </head>
 
@@ -79,7 +78,8 @@
       </section>
       
       <!-- Link this section to the shop? -->
-      <!-- When at the smallest screen size the text overlaps... -->
+      <!-- The text is not styled - found this difficult -->
+      <!-- Desktop: Even with min-height and width the container is all wrong .. -->
       <section class="sale">
         <div class="sale-info"> 
           <p class="sale-title">End of season <spanclass="orange">sale</span></p>
@@ -91,6 +91,8 @@
         </div>
       </section>
 
+
+      <!-- The text on the cta-orange for "shop womens" gets on two lines before the screen changes to mobile .. -->
       <section class="shop">
         <p class="title">Shop our latest trends</p>
         <div class="shop-section"> 
@@ -139,12 +141,98 @@
             <p class="activity-button">Skiing</p>
           </div>
         </div>
-        <a href="shop.html" class="cta-blue">Browse more</a>
+        <div class="browse-more">
+          <a href="shop.html" class="cta-blue">Browse more</a>
+        </div>
       </section>
 
     </main>
 
-    <footer></footer>
+    <footer>
+      <section class="footer-top">
+
+        <div class="footer-logo">
+          <a href="index.html">
+            <img src="assets/icons/rainydays-logo.png" alt="Rainydays logo" class="footer-rainydays">  
+          </a>
+        </div>
+
+        <div class="our-world">
+          <div>
+            <p class="bold">Our world</p>
+          </div>
+          <div>
+            <nav>
+              <ul>
+                <li><a href="about-us.html">About us</a></li>
+                <li><a href="contact-us.html">Contact us</a></li>
+                <li><a href="faq.html">FAQ</a></li>
+              </ul>
+            </nav>  
+          </div>  
+        </div>
+
+        <div class="follow-us">
+          <div>
+            <p class="bold">Follow us</p>
+          </div>
+          <div class="social-media">
+            <div>
+              <img src="assets/icons/facebook-icon.png" alt="Facebook icon" class="footer-icon">
+            </div>
+            <div>
+              <p>Facebook</p>
+            </div>
+          </div>
+          <div class="social-media">
+            <div>
+              <img src="assets/icons/instagram-icon.png" alt="Instagram icon" class="footer-icon">
+            </div>
+            <div>
+              <p>Instagram</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="desktop-newsletter">
+          <div>
+            <p class="bold">Newsletter</p>
+          </div>
+          <div>
+            <p>Be the first to know about our latest drops, sales, news and more.</p>
+          </div>
+          <div>
+            <p>Join the Rainydays community!</p>
+          </div>
+          <div class="desktop-newsletter-mail">
+            <input type="text" class="desktop-newsletter-mail-input"placeholder="example@mail.com">
+            <img src="assets/icons/vector-icon.png"   class="desktop-newsletter-button">
+              <!--need to make an overlay when pressed-->
+          </div>  
+        </div>
+
+      </section>
+
+      <section class="footer-bottom">
+        <div class="footer-newsletter">
+          <div>
+            <p class="bold">Newsletter</p>
+          </div>
+          <div>
+            <p>Be the first to know about our latest drops,   sales, news and more.</p>
+          </div>
+          <div>
+            <p>Join the Rainydays community!</p>
+          </div>
+          <div class="newsletter-mail">
+            <input type="text"  class="newsletter-mail-input"placeholder="example@ma il.com">
+            <img src="assets/icons/vector-icon.png"     class="newsletter-button">
+              <!--need to make an overlay when pressed-->
+          </div>
+        </div>
+      </section>
+
+    </footer>
 
   </body>
 </html>
