--- a/shop.html
+++ b/shop.html
@@ -73,90 +73,124 @@
       <section class="breadcrumbs"></section> 
       <!--need to add the breadcrumbs-->
 
+      <h1>Shop</h1>
 
+      <!--Should all the jackets link to the product specific page?-->
+      <!--Should I add basket icon to the containers?-->
       <section class="shop">
 
-        <a href="products/xplorer-fleece.html"> 
-          <!--should I link all the other jackets to this page as well?-->
+        <a href="products/xplorer-fleece.html">
         <div class="shop-container">
-          <div>
-            <img src="assets/products/jacket-1.png" alt="xplorer fleece jacket" class="jacket-image">
-          </div>
-          <div class="jacket-info">
-            <p>Xplorer fleece jacket</p>
-            <p>A warm and comfortable fleece made to breath, making you ready for any outdoor activity</p>
-            <p class="orange">nok 1 499</p>
-          </div>
+          <img src="assets/products/jacket-1.jpg" alt="xplorer fleece jacket">
+          <p>Xplorer fleece jacket</p>
+          <p class="bold orange">NOK 1499</p>
         </div>
         </a>
 
         <div class="shop-container">
-          <div>
-            <img src="assets/products/jacket-2.png" alt="runnerpluss jacket" class="jacket-image">
-          </div>
-          <div class="jacket-info">
-            <p>RunnerPluss jacket</p>
-            <p>A lightweight runner jacket made from breathable materials and with a detachable hood</p>
-            <p class="orange">nok 999</p>
-          </div>
+          <img src="assets/products/jacket-2.png" alt="runnerpluss jacket" class="jacket-image">
+          <p>RunnerPluss jacket</p>
+          <p class="bold orange">NOK 999</p>
         </div>
 
         <div class="shop-container">
-          <div>
-            <img src="assets/products/jacket-3.png" alt="racerpro cross-country jacket" class="jacket-image">
-          </div>
-          <div class="jacket-info">
-            <p>RacerPro cross-country jacket</p>
-            <p>A jacket perfect for skiing with its elastic materials, extra padding, and lightweight design</p>
-            <p class="orange">nok 1 599</p>
-          </div>
+          <img src="assets/products/jacket-3.png" alt="xplorer fleece jacket">
+          <p>RacerPro jacket</p>
+          <p class="bold orange">NOK 1599</p>
         </div>
 
         <div class="shop-container">
-          <div>
-            <img src="assets/products/jacket-4.png" alt="adventurer jacket" class="jacket-image">
-          </div>
-          <div class="jacket-info">
-            <p>Adventurer jacket</p>
-            <p>The perfect jacket for extreme adventures, providing maximum protection against rain and wind</p>
-            <p class="orange">nok 1 499</p>
-          </div>
+          <img src="assets/products/jacket-4.png" alt="xplorer fleece jacket">
+          <p>Adventurer jacket</p>
+          <p class="bold orange">NOK 1499</p>
         </div>
 
         <div class="shop-container">
-          <div>
-            <img src="assets/products/jacket-5.png" alt="Softshell explorer jacket" class="jacket-image">
-          </div>
-          <div class="jacket-info">
-            <p>Softshell explorer jacket</p>
-            <p>A lightweight jacket made for long hikes with its breathing capabilities, and fleece inner lining</p>
-            <p class="orange">nok 999</p>
-          </div>
+          <img src="assets/products/jacket-5.png" alt="xplorer fleece jacket">
+          <p>Softshell explorer jacket</p>
+          <p class="bold orange">NOK 999</p>
         </div>
 
         <div class="shop-container">
-          <div>
-            <img src="assets/products/jacket-6.png" alt="everyday weather jacket" class="jacket-image">
-          </div>
-          <div class="jacket-info">
-            <p>Everyday weather jacket</p>
-            <p>This jacket is both water- and windproof, making it the perfect companion for long days outside</p>
-            <p class="orange">nok 1 599</p>
-          </div>
+          <img src="assets/products/jacket-6.png" alt="xplorer fleece jacket">
+          <p>Everyday weather jacket</p>
+          <p class="bold orange">NOK 1599</p>
         </div>
 
         <div class="shop-container">
-          <div>
-            <img src="assets/products/jacket-7.png" alt="trackingpro jacket" class="jacket-image">
-          </div>
-          <div class="jacket-info">
-            <p>TrackingPro jacket</p>
-            <p>This jacket is made to keep you warm and comfortable with its windproof lining and detachable hood</p>
-            <p class="orange">nok 1 499</p>
-          </div>
+          <img src="assets/products/jacket-7.png" alt="xplorer fleece jacket">
+          <p>TrackerPro jacket</p>
+          <p class="bold orange">NOK 1499</p>
         </div>
 
       </section>
+
+
+      <!--
+      <section class="shop">
+  
+              <p>A lightweight runner jacket made from breathable materials and with a detachable hood</p>
+              <p class="orange">nok 999</p>
+            </div>
+          </div>
+  
+          <div class="shop-container">
+            <div>
+              <img src="assets/products/jacket-3.png" alt="racerpro cross-country jacket" class="jacket-image">
+            </div>
+            <div class="jacket-info">
+              <p>RacerPro cross-country jacket</p>
+              <p>A jacket perfect for skiing with its elastic materials, extra padding, and lightweight design</p>
+              <p class="orange">nok 1 599</p>
+            </div>
+          </div>
+  
+          <div class="shop-container">
+            <div>
+              <img src="assets/products/jacket-4.png" alt="adventurer jacket" class="jacket-image">
+            </div>
+            <div class="jacket-info">
+              <p>Adventurer jacket</p>
+              <p>The perfect jacket for extreme adventures, providing maximum protection against rain and wind</p>
+              <p class="orange">nok 1 499</p>
+            </div>
+          </div>
+  
+          <div class="shop-container">
+            <div>
+              <img src="assets/products/jacket-5.png" alt="Softshell explorer jacket" class="jacket-image">
+            </div>
+            <div class="jacket-info">
+              <p>Softshell explorer jacket</p>
+              <p>A lightweight jacket made for long hikes with its breathing capabilities, and fleece inner lining</p>
+              <p class="orange">nok 999</p>
+            </div>
+          </div>
+  
+          <div class="shop-container">
+            <div>
+              <img src="assets/products/jacket-6.png" alt="everyday weather jacket" class="jacket-image">
+            </div>
+            <div class="jacket-info">
+              <p>Everyday weather jacket</p>
+              <p>This jacket is both water- and windproof, making it the perfect companion for long days outside</p>
+              <p class="orange">nok 1 599</p>
+            </div>
+          </div>
+  
+          <div class="shop-container">
+            <div>
+              <img src="assets/products/jacket-7.png" alt="trackingpro jacket" class="jacket-image">
+            </div>
+            <div class="jacket-info">
+              <p>TrackingPro jacket</p>
+              <p>This jacket is made to keep you warm and comfortable with its windproof lining and detachable hood</p>
+              <p class="orange">nok 1 499</p>
+            </div>
+          </div>
+  
+        </section>  
+      -->
 
     </main>
 
