css checkout-success and faq

--- a/faq.html
+++ b/faq.html
@@ -7,6 +7,7 @@
     <title>Rainydays | Checkout success</title>
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/header-footer.css">
+    <link rel="stylesheet" href="css/contact-us.css">
     <link rel="icon" type="image/x-icon" href="#"> <!--the favicon-->
   </head>
 
@@ -74,30 +75,73 @@
     <!--need to add the breadcrumbs-->
 
     <h1>Frequently asked questions</h1>
-    <p>What is Rainy Days?</p> <!--should I use the <details> and <summary> on this page so that one has to click to open the different answers?-->
-    <p>Rainy Days is an outdoor apparel brand specializing in high-quality jackets designed for various outdoor activities. Our jackets are crafted with durability, style, and functionality in mind, ensuring you stay comfortable and dry in any weather condition.</p>
-    <p>What makes Rainy Days jackets different?</p>
-    <p>Our jackets are designed to push the comfort zone, offering superior durability, versatility, and performance. We use premium materials, innovative technology, and thoughtful design features to ensure our jackets can withstand the rigors of outdoor adventures while keeping you stylish and comfortable.</p>
-    <p>Are Rainy Days jackets waterproof?</p>
-    <p>Yes, all of our jackets are made with waterproof materials and feature sealed seams to keep you dry even in the heaviest of downpours.</p>
-    <p>What activities are Rainy Days jackets suitable for?</p>
-    <p>Our jackets are designed for a wide range of outdoor activities, including hiking, camping, backpacking, skiing, snowboarding, commuting, and everyday wear. Whether you're exploring the wilderness or navigating city streets, our jackets have you covered.</p>
-    <p>How do I care for my Rainy Days jacket?</p>
-    <p>To ensure the longevity of your jacket, we recommend following the care instructions included on the garment tag. In general, most of our jackets are machine washable and can be tumble dried on low heat. Avoid using fabric softeners and bleach, and always zip up any zippers before washing.</p>
-    <p>Do you offer a warranty on your jackets?</p>
-    <p>Yes, we stand behind the quality of our products and offer a limited warranty against manufacturing defects. If you experience any issues with your jacket, please contact our customer service team for assistance.</p>
-    <p>What is your return policy?</p>
-    <p>We want you to be completely satisfied with your purchase. If for any reason you're not happy with your jacket, you may return it within 30 days of purchase for a full refund or exchange. Please refer to our Returns & Exchanges page for more information.</p>
-    <p>How can I track my order?</p>
-    <p>Once your order has been processed and shipped, you will receive a confirmation email with tracking information. You can use this information to track the status of your order and estimated delivery date.</p>
-    <p>Do you offer international shipping?</p>
-    <p>Yes, we offer international shipping to select countries. Please note that additional shipping fees and import duties may apply. For more information, please contact our customer service team.</p>
-    <p>How can I contact customer service?</p>
 
-    <p>If you have any further questions or need assistance, our customer service team is here to help. You can reach us by email at support@rainydays.com or by phone at +47 102 03 040. We're available Monday through Friday, from eight to five.</p>
+    <div class="faq-positioning">
+      <section class="faq">
 
-    <p>Didn´t get the answers you were looking for? </p>
-    <button class="cta-blue">SEND US A MESSAGE</button> <!--Style the uppercase in CSS? Also this as a <link> or <button>-->
+        <details class="faq-container">
+          <summary>What is Rainy Days?</summary>
+          <p>Rainy Days is an outdoor apparel brand specializing in high-quality jackets designed for various outdoor activities. Our jackets are crafted with durability, style, and functionality in mind, ensuring you stay comfortable and dry in any weather condition.</p>
+        </details>
+  
+        <details class="faq-container">
+          <summary>What makes Rainy Days jackets different?</summary>
+          <p>Our jackets are designed to push the comfort zone, offering superior durability, versatility, and performance. We use premium materials, innovative technology, and thoughtful design features to ensure our jackets can withstand the rigors of outdoor adventures while keeping you stylish and comfortable.</p>
+        </details>
+  
+        <details class="faq-container">
+          <summary>Are Rainy Days jackets waterproof?</summary>
+          <p>Yes, all of our jackets are made with waterproof materials and feature sealed seams to keep you dry even in the heaviest of downpours.</p>
+        </details>
+  
+        <details class="faq-container">
+          <summary>What activities are Rainy Days jackets suitable for?</summary>
+          <p>Our jackets are designed for a wide range of outdoor activities, including hiking, camping, backpacking, skiing, snowboarding, commuting, and everyday wear. Whether you're exploring the wilderness or navigating city streets, our jackets have you covered.</p>
+        </details class="faq-container">
+  
+        <details class="faq-container">
+          <summary>How do I care for my Rainy Days jacket?</summary>
+          <p>To ensure the longevity of your jacket, we recommend following the care instructions included on the garment tag. In general, most of our jackets are machine washable and can be tumble dried on low heat. Avoid using fabric softeners and bleach, and always zip up any zippers before washing.</p>
+        </details>
+  
+        <details class="faq-container">
+          <summary>Do you offer a warranty on your jackets?</summary>
+          <p>Yes, we stand behind the quality of our products and offer a limited warranty against manufacturing defects. If you experience any issues with your jacket, please contact our customer service team for assistance.</p>
+        </details>
+  
+        <details class="faq-container">
+          <summary>What is your return policy?</summary>
+          <p>We want you to be completely satisfied with your purchase. If for any reason you're not happy with your jacket, you may return it within 30 days of purchase for a full refund or exchange. Please refer to our Returns & Exchanges page for more information.</p>
+        </details>
+  
+        <details class="faq-container">
+          <summary>How can I track my order?</summary>
+          <p>Once your order has been processed and shipped, you will receive a confirmation email with tracking information. You can use this information to track the status of your order and estimated delivery date.</p>
+        </details>
+  
+        <details class="faq-container">
+          <summary>Do you offer international shipping?</summary>
+          <p>Yes, we offer international shipping to select countries. Please note that additional shipping fees and import duties may apply. For more information, please contact our customer service team.</p>
+        </details>
+  
+        <details class="faq-container">
+          <summary>How can I contact customer service?</summary>
+          <p>If you have any further questions or need assistance, our customer service team is here to help. You can reach us by email at support@rainydays.com or by phone at +47 102 03 040. We're available Monday through Friday, from eight to five.</p>
+        </details>
+  
+      </section>
+  
+      <section class="faq-contact">
+        <div>
+          <img src="assets/images/faq.png">
+        </div>
+        <div>
+          <p class="underline">Didn´t get the answers you were looking for? </p>
+          <a href="contact-form.html" class="cta-blue">SEND US A MESSAGE</a>
+          <!-- How to make an overlay ?? -->  
+        </div>
+      </section>
+    </div>
 
   </main>
 
