--- a/checkout-success.html
+++ b/checkout-success.html
@@ -74,6 +74,27 @@
     <section class="breadcrumbs"></section> 
     <!--need to add the breadcrumbs-->
 
+    <h1>Your order has been confirmed!</h1>
+    <!--Need this center aligned-->
+
+    <section class="checkout-success">
+
+      <div>
+        <img src="assets/icons/checkmark.png" class="checkmark">
+      </div>
+
+      <div>
+        <p>Congratulations! Your order with RainyDays has been successfully confirmed. Thank you for choosing us to be part of your outdoor adventures.</p>
+        <p>Our team is working hard to prepare your order for shipment. You will receive a confirmation email with tracking information once your order has been processed and shipped.</p>
+        <p>Keep an eye on your email inbox for updates about your order, and don´t hesitate to reach out to our customer service team if you have any questions or concerns. We´re here to help!</p>
+        <p class="underline">Happy trails!</p>
+        <p class="bold">- The Rainydays team</p>
+      </div>
+
+    </section>
+
+    
+    <!--
     <section class="checkout-success">
       <div class="checkout-heading">
         <h1>Your order has been confirmed!</h1>
@@ -92,6 +113,7 @@
         </div>
       </div>
     </section>
+    -->
 
 
   </main>
