--- a/products/xplorer-fleece.html
+++ b/products/xplorer-fleece.html
@@ -76,39 +76,43 @@
 
       <section class="product-specific">
         <div class="product-image-container">
-          <img src="../assets/products/jacket-1.jpg" alt="xplorer fleece jacket" class="product-image">
+          <div class="product-image-container">
+            <img src="../assets/products/jacket-1.jpg" alt="xplorer fleece jacket" class="product-image">
+          </div>  
         </div>
-        <div>
-          <h1>Xplorer fleece jacket</h1>
-          <p>Color: Evening green</p>
-          <p class="title bold">NOK 1 499</p>
-        </div>
-        <div>
-          <select name="size" id="size">
-            <option value="xxsmall">XX-small</option>
-            <option value="xsmall">X-small</option>
-            <option value="small">Small</option>
-            <option value="medium">Medium</option>
-            <option value="large">Large</option>
-            <option value="xlarge">X-large</option>
-            <option value="xxlarge">XX-large</option>
-          </select>
-          <a href="../checkout.html" class="cta-blue">Add to cart</a>
-        </div>
-        <div>
-          <p class="bold">Description</p>
-          <p>Embrace the chill of the evening with the Xplorer Fleece Jacket in the serene shade of evening green. Crafted with renowned quality and expertise, this jacket is designed to keep you warm, comfortable, and stylish no matter the adventure.</p>
-          <p>Made from ultra-soft and cozy fleece fabric, this jacket offers superior warmth without sacrificing breathability. Whether you're hiking through the mountains, camping under the stars, or simply running errands around town, the Xplorer Fleece Jacket is your go-to layer for cooler weather.</p>
-          <p>Featuring a full-zip front closure for easy on and off, along with zippered handwarmer pockets to keep your essentials secure, this jacket combines functionality with timeless style.</p>
-          <p class="bold">Product Details:</p>
-          <ul>
-            <li>Color: Evening Green</li>
-            <li>Material: 100% recycled polyester fleece</li>
-            <li>Full-zip front closure</li>
-            <li>Zippered handwarmer pockets</li>
-            <li>Regular fit</li>
-            <li>Machine washable</li>
-          </ul>
+        <div class="product-info">
+          <div>
+            <h1>Xplorer fleece jacket</h1>
+            <p>Color: Evening green</p>
+            <p class="title bold">NOK 1 499</p>
+          </div>
+          <div>
+            <select name="size" id="size">
+              <option value="xxsmall">XX-small</option>
+              <option value="xsmall">X-small</option>
+              <option value="small">Small</option>
+              <option value="medium">Medium</option>
+              <option value="large">Large</option>
+              <option value="xlarge">X-large</option>
+              <option value="xxlarge">XX-large</option>
+            </select>
+            <a href="../checkout.html" class="cta-blue">Add to cart</a>
+          </div>
+          <div>
+            <p class="bold">Description</p>
+            <p>Embrace the chill of the evening with the Xplorer Fleece Jacket in the serene shade of evening green. Crafted with renowned quality and expertise, this jacket is designed to keep you warm, comfortable, and stylish no matter the adventure.</p>
+            <p>Made from ultra-soft and cozy fleece fabric, this jacket offers superior warmth without sacrificing breathability. Whether you're hiking through the mountains, camping under the stars, or simply running errands around town, the Xplorer Fleece Jacket is your go-to layer for cooler weather.</p>
+            <p>Featuring a full-zip front closure for easy on and off, along with zippered handwarmer pockets to keep your essentials secure, this jacket combines functionality with timeless style.</p>
+            <p class="bold">Product Details:</p>
+            <ul>
+              <li>Color: Evening Green</li>
+              <li>Material: 100% recycled polyester fleece</li>
+              <li>Full-zip front closure</li>
+              <li>Zippered handwarmer pockets</li>
+              <li>Regular fit</li>
+              <li>Machine washable</li>
+            </ul>
+          </div>  
         </div>
       </section>
 
